--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,8 @@ steps:
     entrypoint: mvn
     args: ["package", "-Dmaven.test.skip=true"]
   - name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "us-docker.pkg.dev/$PROJECT_ID/$_REPO_NAME/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
-images: ["us-docker.pkg.dev/$PROJECT_ID/$_REPO_NAME/hellospring"]
+  args: ["build", "-t", "gcr.io/linen-striker-359705/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
+images: ["gcr.io/linen-striker-359705/hellospring"]
+   # args: ["build", "-t", "global.pkg.dev/linen-striker-359705/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
+#images: ["global.pkg.dev/linen-striker-359705/$_REPO_NAME/hellospring"]
 # [END cloudbuild_maven]
