--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
   - name: maven:3-jdk-8
     entrypoint: mvn
     args: ["package", "-Dmaven.test.skip=true"]
-  - name: gcr.io/cloud-builders/docker
+  - name: 'gcr.io/cloud-builders/docker'
   args: ["build", "-t", "gcr.io/linen-striker-359705/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
 images: ["gcr.io/linen-striker-359705/hellospring"]
    # args: ["build", "-t", "global.pkg.dev/linen-striker-359705/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
