--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,20 @@
 steps:
-  - name: maven:3-jdk-8
-    entrypoint: mvn
-    args: ["test"]
-  - name: maven:3-jdk-8
-    entrypoint: mvn
-    args: ["package", "-Dmaven.test.skip=true"]
-  - name: 'gcr.io/cloud-builders/docker'
-  args: ["build", "-t", "gcr.io/linen-striker-359705/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
-images: ["gcr.io/linen-striker-359705/hellospring"]
-   # args: ["build", "-t", "global.pkg.dev/linen-striker-359705/hellospring", "--build-arg=JAR_FILE=target/hello-spring-1.0.0.jar", "."]
-#images: ["global.pkg.dev/linen-striker-359705/$_REPO_NAME/hellospring"]
-# [END cloudbuild_maven]
+ # Build the container image
+ - name: 'gcr.io/cloud-builders/docker'
+   args: ['build', '-t', 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA', '.']
+ # Push the container image to Container Registry
+ - name: 'gcr.io/cloud-builders/docker'
+   args: ['push', 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA']
+ # Deploy container image to Cloud Run
+ - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+   entrypoint: gcloud
+   args:
+   - 'run'
+   - 'deploy'
+   - 'SERVICE-NAME'
+   - '--image'
+   - 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA'
+   - '--region'
+   - 'global'
+ images:
+ - 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA'
