--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,18 +1,5 @@
 steps:
- # Build the container image
- - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA', '.']
- # Push the container image to Container Registry
- - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA']
- # Deploy container image to Cloud Run
- - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-   entrypoint: gcloud
-   args:
-   - 'run'
-   - 'deploy'
-   - 'SERVICE-NAME'
-   - '--image'
-   - 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA'
- images:
- - 'gcr.io/linen-striker-359705/SERVICE-NAME:$COMMIT_SHA'
+- name: 'gcr.io/cloud-builders/mvn'
+  args: ['install']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/linen-striker-359705/myimage', '.']
