--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,2 +1,4 @@
-FROM alpine
-CMD ["echo", "Hello World!"]
+FROM openjdk:19-jdk-alpine
+ARG JAR_FILE=JAR_FILE_MUST_BE_SPECIFIED_AS_BUILD_ARG
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
