--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['install']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/linen-striker-359705/myimage', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/myimage', '.']
